--- a/app_blog/templates/app_blog/index.html
+++ b/app_blog/templates/app_blog/index.html
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ post.title }}</h5>
                 <p class="card-text">{{ post.text }}</p>
-                <a href="#" class="btn btn-primary">Читать</a>
+                <a href=" {% url 'post_detail' post.slug %} " class="btn btn-primary">Читать</a>
             </div>
         </div>
     {% endfor %}
