--- a/app_blog/templates/app_blog/post_detail.html
+++ b/app_blog/templates/app_blog/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'app_blog/base_blog.html' %}
 
+{% block title %}Пост{% endblock title %}
+
 {% block content %}
     <h1> {{ post.title }} </h1>
     {{ post.text }}
