--- a/app_blog/templates/app_blog/tags_list.html
+++ b/app_blog/templates/app_blog/tags_list.html
@@ -1,8 +1,10 @@
 {% extends 'app_blog/base_blog.html' %}
 
+{% block title %}Теги{% endblock title %}
 
 {% block content %}
     {% for tag in tags %}
-        <p>{{ tag.title }}</p>
+        <p><a href="{% url 'tag' tag.slug %}">{{ tag.title }}</a></p>
+
     {% endfor %}
 {% endblock content %}
