--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href=" {% url 'tags' %} ">Теги</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled">Disabled</a>
