Add file utils.py adn create ObjectDetailMixin.
Inherit from ObjectDetailMixin: TagPostList and PostDetail.

--- a/app_blog/templates/app_blog/tag_posts_list.html
+++ b/app_blog/templates/app_blog/tag_posts_list.html
@@ -1,7 +1,7 @@
 {% extends 'app_blog/base_blog.html'%}
 
 {% block content %}
-    {% for post in posts.posts.all %}
+    {% for post in tag.posts.all %}
         {% include 'app_blog/includes/post_card.html' %}
     {% endfor %}
 {% endblock content %}
