--- a/app_blog/templates/app_blog/includes/post_card.html
+++ b/app_blog/templates/app_blog/includes/post_card.html
@@ -5,7 +5,7 @@
         <div class="card-body">
             <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.text }}</p>
-            <a href=" {% url 'post_detail' post.slug %} " class="btn btn-primary">Читать</a>
+            <a href=" {{ post.get_absolute_url }} " class="btn btn-primary">Читать</a>
         </div>
         <div class="card-footer text-muted">
             {% for tag in post.tags.all %}
